Updated Dockerfile reference in Jenkinsfile

--- a/docker-oci-examples/fat-manifest-example/Jenkinsfile
+++ b/docker-oci-examples/fat-manifest-example/Jenkinsfile
@@ -4,7 +4,7 @@ node {
 
     docker.withRegistry('https://tomjfrog.jfrog.io/artifactory/api/docker/dockerociexamples-docker', 'jenkins-username-and-password') {
 
-        def myImage = docker.build('tomjfrog.jfrog.io/dockerociexamples-dev/fat-manifest:latest', './Dockerfile.Fatmanifest')
+        def myImage = docker.build('tomjfrog.jfrog.io/dockerociexamples-dev/fat-manifest:latest', 'Dockerfile.Fatmanifest')
 
         myImage.push()
     }
