--- a/docker-oci-examples/fat-manifest-example/Jenkinsfile
+++ b/docker-oci-examples/fat-manifest-example/Jenkinsfile
@@ -19,7 +19,7 @@ node {
                 tagDockerApp = "${ART_DOCKER_REGISTRY}/fat-manifest-example:${env.BUILD_NUMBER}"
                 docker.build(tagDockerApp)
                 withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: CREDENTIALS, usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
-                    rtDocker = Artifactory.docker server: rtServer
+//                     rtDocker = Artifactory.docker server: rtServer
                     println "Docker Push"
                     rtDocker.push(tagDockerApp, REPO, buildInfo)
                     println "Docker Publish: " + buildInfo
@@ -30,7 +30,7 @@ node {
 
 
 
-        def myImage = docker.build('tomjfrog.jfrog.io/dockerociexamples-dev/fat-manifest:latest')//
-        myImage.push()
+//         def myImage = docker.build('tomjfrog.jfrog.io/dockerociexamples-dev/fat-manifest:latest')//
+//         myImage.push()
 
 }
