Change to Jenkinsfile to match soleng example v3

--- a/docker-oci-examples/fat-manifest-example/Jenkinsfile
+++ b/docker-oci-examples/fat-manifest-example/Jenkinsfile
@@ -1,6 +1,6 @@
 node {
     def rtServer = Artifactory.newServer url: SERVER_URL, credentialsId: CREDENTIALS
-    def rtDocker= Artifactory.docker server: rtServer, host: "tcp://127.0.0.1:1234"
+//     def rtDocker= Artifactory.docker server: rtServer, host: "tcp://127.0.0.1:1234"
     def buildName = "fat-manifest-example"
     def buildInfo = Artifactory.newBuildInfo()
     buildInfo.env.capture = true
